--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,4 +9,5 @@ spring:
     name: spammer
 
 spammer:
+  message-interval-millis: 500
   worker-notification-url: http://localhost:8381/worker/notification
